<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:background="@drawable/recycler_view_border">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/thrust_constraint"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:background="@drawable/bottom_attribute_value_background"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:text="@string/dimension"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/header_text" android:background="@drawable/title_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/attribute_value_background" android:id="@+id/constraintLayout"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/thrust_constraint" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/attribute_background" android:text="@string/diameter"
                android:id="@+id/textView8"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/diameter"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toTopOf="@+id/textView8"
                app:layout_constraintBottom_toBottomOf="@+id/textView8" android:textColor="@color/primaryDarkColor"
                android:paddingStart="5dp" android:paddingEnd="5dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/attribute_value_background" android:id="@+id/constraintLayout2"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/attribute_background" android:text="@string/height"
                android:id="@+id/textView30"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/height"
                app:layout_constraintStart_toEndOf="@+id/textView30"
                app:layout_constraintTop_toTopOf="@+id/textView30"
                app:layout_constraintBottom_toBottomOf="@+id/textView30" android:textColor="@color/primaryDarkColor"
                android:paddingStart="5dp" android:paddingEnd="5dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_attribute_value_background"
            android:id="@+id/constraintLayout3"
            android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/bottom_attribute_background" android:text="@string/mass"
                android:id="@+id/textView7"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/mass"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="@+id/textView7"
                app:layout_constraintBottom_toBottomOf="@+id/textView7" android:textColor="@color/primaryDarkColor"
                android:paddingStart="5dp" android:paddingEnd="5dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginStart="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>