<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/recycler_view_border" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/thrust_constraint"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:background="@drawable/bottom_attribute_value_background"
                app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:text="@string/thrust"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/header_text" android:background="@drawable/title_background"
                    app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/thrustUnit"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2" android:textColor="@color/primaryDarkColor"
                    android:paddingEnd="5dp" android:paddingStart="5dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/thrust_constraint"
                android:layout_marginTop="4dp"
                android:background="@drawable/attribute_value_background" android:id="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:background="@drawable/attribute_background" android:text="@string/thrust_sl"
                    android:id="@+id/textView8"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/thrustSealevel"
                    app:layout_constraintStart_toEndOf="@+id/textView8"
                    app:layout_constraintTop_toTopOf="@+id/textView8"
                    app:layout_constraintBottom_toBottomOf="@+id/textView8" android:textColor="@color/primaryDarkColor"
                    android:paddingStart="5dp" android:paddingEnd="5dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/bottom_attribute_value_background" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="4dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:background="@drawable/bottom_attribute_background" android:text="@string/thrust_vac"
                    android:id="@+id/textView7"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/thrustVacuum"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    app:layout_constraintTop_toTopOf="@+id/textView7"
                    app:layout_constraintBottom_toBottomOf="@+id/textView7" android:textColor="@color/primaryDarkColor"
                    android:paddingStart="5dp" android:paddingEnd="5dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginStart="8dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>